--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
   
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Nunito:400,300,700'>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   
 </head>
 
